--- a/TODO.org
+++ b/TODO.org
@@ -1,4 +1,5 @@
 * Tasks
+** Create different hash tables for packages with different source like github
 ** Workgroups
 *** TODO Add a directory scanning mode. load each workgroup by name only.
 ** TODO Provide a variable (defcustom) which allow user to easily change them from customize menu
